--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutterapp1">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="https://moisessunza.github.io/Codelabs_1_72954/icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="https://moisessunza.github.io/Codelabs_1_72954/favicon.png"/>
 
   <title>flutterapp1</title>
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="https://moisessunza.github.io/Codelabs_1_72954/manifest.json">
 </head>
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script src="https://moisessunza.github.io/Codelabs_1_72954/flutter_bootstrap.js" async></script>
 </body>
 </html>
+
