--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="/Codelabs_1_72954/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -24,16 +24,15 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="flutterapp1">
-  <link rel="apple-touch-icon" href="https://moisessunza.github.io/Codelabs_1_72954/icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://moisessunza.github.io/Codelabs_1_72954/favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>flutterapp1</title>
-  <link rel="manifest" href="https://moisessunza.github.io/Codelabs_1_72954/manifest.json">
+  <link rel="manifest" href="manifest.json">
 </head>
 <body>
-  <script src="https://moisessunza.github.io/Codelabs_1_72954/flutter_bootstrap.js" async></script>
+  <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
-
